--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -1,20 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ArticleController!{% endblock %}
+{% block title %}Article{% endblock %}
+
+{% block javascripts %}
+    {# ne pas overrider le script parent #}
+    {{ parent() }}
+    <script src="{{ asset('js/vote.js') }}"></script>
+    <script>
+        // Script local pour incrémenter un nombre
+        document.addEventListener('DOMContentLoaded', function() {
+            var localButton = document.getElementById('localButton');
+            var incrementedNumber = document.getElementById('incrementedNumber');
+            var count = 0;
+
+            if (localButton) {
+                localButton.addEventListener('click', function() {
+                    count++;
+                    incrementedNumber.textContent = count;
+                });
+            }
+        });
+    </script>
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="example-wrapper">
+        <h2>
+            Article numéro {{ number }}
+        </h2>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+        <h2>Générer</h2>
+        <button id="globalButton">Générer un nombre aléatoire</button>
+        <p id="globalNumberShow"></p>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/yana0/vues/src/Controller/ArticleController.php'|file_link(0) }}">src/Controller/ArticleController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/yana0/vues/templates/article/index.html.twig'|file_link(0) }}">templates/article/index.html.twig</a></code></li>
-    </ul>
-</div>
+        <h2>Incrementer</h2>
+        <button id="localButton">Incrémenter le nombre</button>
+        <p id="incrementedNumber">0</p>
+
+        
+    </div>
+
 {% endblock %}
