--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,12 +5,50 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
+            <link href="{{ asset('style/style.css') }}" rel="stylesheet"/>
+            <style>
+                .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+                .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+            </style>
         {% endblock %}
 
         {% block javascripts %}
+            <script
+                src="https://code.jquery.com/jquery-3.4.1.min.js"
+                integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+                crossorigin="anonymous"></script>
         {% endblock %}
     </head>
     <body>
+        <nav>
+            <ul>
+                <li>
+                    <a href="{{ path('app_home') }}">
+                        <p>Accueil</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="{{ path('nb_alea') }}">
+                        <p>Nb Alea</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="{{ path('first_string') }}">
+                        <p>First String</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="{{ path('dateDay') }}">
+                        <p>dateDay</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="{{ path('app_article', { number: '42' }) }}">
+                        <p>Article 42</p>
+                    </a>
+                </li>
+            </ul>
+        </nav>
         {% block body %}{% endblock %}
     </body>
 </html>
