--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -5,7 +5,6 @@
 {% block javascripts %}
     {# ne pas overrider le script parent #}
     {{ parent() }}
-    <script src="{{ asset('js/vote.js') }}"></script>
     <script>
         // Script local pour incrémenter un nombre
         document.addEventListener('DOMContentLoaded', function() {
@@ -31,7 +30,7 @@
 
         <h2>Générer</h2>
         <button id="globalButton">Générer un nombre aléatoire</button>
-        <p id="globalNumberShow"></p>
+        <p id="globalNumberShow">Test</p>
 
         <h2>Incrementer</h2>
         <button id="localButton">Incrémenter le nombre</button>
